--- a/app/assets/stylesheets/partials/dashboard/editor/_core.sass
+++ b/app/assets/stylesheets/partials/dashboard/editor/_core.sass
@@ -5,9 +5,10 @@ app-document-viewer .document .wrapper#editor
     overflow: auto
 
     main.min-container
-        width: 90%
+        width: 95%
         max-width: none
         padding: 0
+        margin-right: 0
 
         app-project-viewer
             @import 'partials/dashboard/editor/overview'
